kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disable
    zarf.dev/agent: ignore
  name: leapfrogai
