kubernetes/install.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: ghcr.io/defenseunicorns/leapfrogai/api:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embeddings-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: embeddings
  template:
    metadata:
      labels:
        app: embeddings
    spec:
      containers:
        - name: embeddings-container
          imagePullPolicy: Always
          image: ghcr.io/defenseunicorns/leapfrogai/embeddings:0.0.1
          ports:
            - containerPort: 50051 # Assume this is the gRPC port

---

apiVersion: v1
kind: Service
metadata:
  name: sentence-transformers
spec:
  selector:
    app: embeddings
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama
  template:
    metadata:
      labels:
        app: llama
    spec:
      containers:
        - name: llama-container
          # imagePullPolicy: Always
          imagePullPolicy: Never # Building on the node currently so we don't have to push/pull
          image: ghcr.io/defenseunicorns/leapfrogai/llama:0.0.1
          ports:
            - containerPort: 50051 # Assume this is the gRPC port
          resources:
            limits:
              nvidia.com/gpu: 1
            requests:
              nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: llama
spec:
  selector:
    app: llama
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
